mType/tests/testFiles/error/error/nestedInterfaceInInterface.mt
interface A {
    function test(): void;

    interface D {
        function another(): int;
    }
}
